--- a/google-hangouts/backend/.env
+++ b/google-hangouts/backend/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGOURI=mongodb://localhost:27017/dexterdb
 JWT_SECRET=mysecretkey12345
+TWILIO_ACCOUNT_SID=ACa74fd3e7ada93873c6844e1f88bbfdb9
+TWILIO_AUTH_TOKEN=47232a2eadfc545e63a959a88ed422ef
+TWILIO_PHONE_NUMBER=+12059527419
