--- a/google-hangouts/backend/package.json
+++ b/google-hangouts/backend/package.json
@@ -16,10 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-pino-logger": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
+  },
+  "devDependencies": {
+    "twilio": "^4.14.1"
   }
 }
