--- a/google-hangouts/frontend/package.json
+++ b/google-hangouts/frontend/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.7.1"
+    "socket.io-client": "^4.7.1",
+    "twilio-client": "^1.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
