--- a/google-hangouts/backend/package.json
+++ b/google-hangouts/backend/package.json
@@ -21,7 +21,9 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.2",
+    "twilio-client": "^1.15.0"
   },
   "devDependencies": {
     "twilio": "^4.14.1"
