--- a/google-hangouts/frontend/package.json
+++ b/google-hangouts/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@twilio/voice-sdk": "^2.7.1",
+    "agora-rtc-react": "^1.1.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
