--- a/google-hangouts/frontend/package.json
+++ b/google-hangouts/frontend/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@twilio/voice-sdk": "^2.7.1",
     "agora-rtc-react": "^1.1.3",
+    "agora-rtc-sdk-ng": "^4.18.2",
+    "agora-rtm-sdk": "^1.5.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
